Update 2. ServerSide: SQL Injection.md

--- a/4월 11일/SQL Injection/2. ServerSide: SQL Injection/2. ServerSide: SQL Injection.md
+++ b/4월 11일/SQL Injection/2. ServerSide: SQL Injection/2. ServerSide: SQL Injection.md
@@ -88,4 +88,12 @@ print(f"Password is {password}")
 **for idx in range(0, 20):** 를 보면, 20자리 이하의 비밀번호를 찾을건데, **params['uid'] = query.format(idx=idx+1, val=ord(ch)).strip("\n")** 를 통해 query를 계속 바꿔서 Blind SQL Injection 을 한다.  
 그래서 로그인에 성공하면, password 를 보여준다.  
 # 퀴즈  
-
+```SQL
+SELECT * FROM accounts QHERE user_id='admin' and user_pw='(A)'
+```
+1. 다음 SQL Query의 (A) 부분에 입력 값을 넣을 수 있다고 할 때, id가 admin 계정으로 로그인이 가능한 SQL Injection 페이로드를 모두 고르시오.  
+답 : **' or 1=1-- 1**, **'+(select user_pw from accounts where user_id='admin')+'**  
+2. 실습 모듈에서 획득한 admin의 비밀번호는 (A) 입니다. (A)에 들어갈 말로 올바른 것은?   
+답 : strawberry  
+3. 다음 중 일반적인 상황에서 SQL Injection으로 할 수 없는 행위를 고르시오. (MySQL 기준)  
+답 : 내부망 침투하기  
