--- a/4월 11일/SQL Injection/2. ServerSide: SQL Injection/2. ServerSide: SQL Injection.md
+++ b/4월 11일/SQL Injection/2. ServerSide: SQL Injection/2. ServerSide: SQL Injection.md
@@ -2,6 +2,7 @@
 **SQL Injection** : DBMS에서 사용하는 **쿼리를 임의로 조작**해 데이터베이스의 **정보를 획득**하는 공격  
 **인젝션 공격** : **이용자의 입력값**이 **구조**나 **문법적인 데이터**로 **해석**되어 발생하는 취약점  
 <img src="1.jpg">  
+<img src="15.jpg">  
 다음은 SQL Injection 의 예시입니다.  
 원래는 맨 위에 있는 것처럼 요청을 보내서 색깔을 지정한다. 
 그러나 **올바르지 않은 요청**을 보내서 **의도하지 않은 행위**(공장 가동 종료 등)를 하게 하는 것을 **인젝션** 이라고 한다.  
